fix(welcome.page): fixed align error

--- a/src/app/pages/auth/welcome/welcome.page.scss
+++ b/src/app/pages/auth/welcome/welcome.page.scss
@@ -53,5 +53,5 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
 }
